style.css
body {
    margin: 0;
    padding: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    background: #ffffff;
    font-family: "Gloria Hallelujah", cursive;
    overflow: hidden;
    flex-direction: column;
}

#heading {
    display: flex;
    justify-content: center;
    font-family: "Gloria Hallelujah", cursive;
    font-weight: 600;
    font-size: 20px;
    transition: transform 0.6s ease;
}

/* Envelope */
#envelope {
    width: 400px;
    cursor: pointer;
    transition: transform 0.6s ease;
}

.fade-in {
    opacity: 0;
}

.fade-in.show {
    opacity: 1;
    transition: opacity 1.5s ease-in;
}

/* Fullscreen letter */
#letter-container {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: #ede7b3;
    display: none;
    justify-content: center;
    align-items: center;
    padding: 40px;
    box-sizing: border-box;
    flex-direction: column;
    z-index: 100;
    background-image: linear-gradient(to right, #74c6d1 1px, transparent 1px),
        linear-gradient(to bottom, #74c6d1 1px, transparent 1px);
    background-size: 125px 60px;
}

#letter {
    font-size: 1.1rem;
    line-height: 2.5rem;
    max-width: 80vw;
    white-space: pre-wrap;
    border-left: 3px solid #74c6d1;
    padding-left: 15px;
    font-family: "Gloria Hallelujah", cursive;
    font-weight: 600;
    max-height: 60vh;
    /* overflow-y: auto; */
}

#date1 {
    position: absolute;
    top: 40px;
    left: 20px;
    font-weight: bold;
    font-family: "Gloria Hallelujah", cursive;
    font-size: 0.8rem;
}

#date2 {
    position: absolute;
    top: 60px;
    left: 20px;
    font-weight: bold;
    font-family: "Gloria Hallelujah", cursive;
    font-size: 0.8rem;
}

/* Close button */
#close-btn {
    position: absolute;
    top: 20px;
    right: 20px;
    background: #74c6d1;
    padding: 8px 14px;
    cursor: pointer;
    font-weight: bold;
    border: none;
    border-radius: 20px;
    font-family: "Gloria Hallelujah", cursive;
}

#ps-container {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    width: max-content;
    position: absolute;
    bottom: 20px;
    right: 20px;
    background: pink;
    padding: 8px 14px;
    font-weight: bold;
    border: none;
    border-radius: 20px;
    box-shadow: 10px 15px 10px rgba(0, 0, 0, 0.3);
}

@media screen and (min-width: 340px) and (max-width: 1000px) {
    #letter {
        overflow-y: auto;
    }
}

